dbeaver/pro#7796 Trace logging and fixes