@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -73,13 +73,13 @@ public class DefaultProgressMonitor implements DBRProgressMonitor {
         if (states.isEmpty()) {
             log.trace(new DBCException("Progress ended without start"));
         } else {
-            states.remove(states.size() - 1);
+            states.removeLast();
         }
         nestedMonitor.done();
 
         // Restore previous state
         if (!states.isEmpty()) {
-            ProgressState lastState = states.remove(states.size() - 1);
+            ProgressState lastState = states.removeLast();
             nestedMonitor.beginTask(lastState.taskName, lastState.totalWork);
             if (lastState.subTask != null) {
                 nestedMonitor.subTask(lastState.subTask);
@@ -91,23 +91,21 @@ public class DefaultProgressMonitor implements DBRProgressMonitor {
     }
 
     @Override
-    public void subTask(String name)
-    {
+    public void subTask(String name) {
         if (states.isEmpty()) {
             log.trace(new DBCException("Progress sub task without start"));
         } else {
-            states.get(states.size() - 1).subTask = name;
+            states.getLast().subTask = name;
         }
         nestedMonitor.subTask(name);
     }
 
     @Override
-    public void worked(int work)
-    {
+    public void worked(int work) {
         if (states.isEmpty()) {
             log.trace(new DBCException("Progress info without start"));
         } else {
-            states.get(states.size() - 1).progress += work;
+            states.getLast().progress += work;
         }
         nestedMonitor.worked(work);
     }
@@ -141,7 +139,7 @@ public class DefaultProgressMonitor implements DBRProgressMonitor {
         //if (blocks.size() == 1) {
         //    this.done();
         //}
-        blocks.remove(blocks.size() - 1);
+        blocks.removeLast();
     }
 
     @Override
